# deno-director

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  errrors.txt  jest.config.js  package-lock.json  package.json  patch.diff  task.md  test_results.txt  tsconfig.idx.json  tsconfig.json
bench/: bandwidth.ts  run.mjs  v8-bench.js
codex/: check-test-any.sh  code_export.mjs  codex-jest.sh  codex-loop.sh  codex-reset.sh  codex-test.md  jest-output.txt
examples/: 01-basic-eval.ts  02-eval-module.ts  03-globals.ts  04-messages.ts  05-imports-callback.ts  06-https-imports.ts  07-node-resolve.ts  08-limits.ts  09-console-routing.ts  10-director.ts  11-streams.ts  12-handles.ts  15-nodejs-cjs-interop.ts  README.md
ipc-bench/: package.json  reslults.md  tsconfig.json
ray-bench/: README.md  package-lock.json  package.json  spec.md
scripts/: code_export.mjs
src/: index.ts  lib.rs
test-ts/: api.spec.ts  bridge.isolation.spec.ts  bridge.types.spec.ts  console.spec.ts  contention.spec.ts  cwd.api.spec.ts  data.spec.ts  director.spec.ts  env.api.spec.ts  env.node_compat.spec.ts  env.runtime.spec.ts  eval.module.spec.ts  eval.spec.ts  events.off.spec.ts  globals.spec.ts  handles.spec.ts  helpers.assertions.ts  helpers.worker-harness.ts  imports.edge.spec.ts  imports.spec.ts  imports.ts_compile.spec.ts  inspect_env.spec.ts  jest.setup.ts  lifecycle.template.spec.ts  limits.spec.ts  memory.leaks.spec.ts  memory.spec.ts  messages.spec.ts  module_loader.remote.spec.ts  modules.spec.ts  node_compat_resolve.spec.ts  options.merge.spec.ts  promises.spec.ts  runtime.events.spec.ts  (+4 more)
(+53 files in other folders)
