[package]
name = "deno-core-vm"
version = "0.8.0"
description = "Run a Deno core worker from NodeJS"
authors = ["me@scottlott.com"]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
neon = { version = "1.1.1", features = ["futures"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
cpu-time = "1.0.0"

# still referenced directly in your crate; ok to keep for now
deno_runtime = { version = "=0.242.0", features = ["transpile", "snapshot" ] }
deno_ast = { version = "=0.53.1", features = ["transpiling"] }
deno_core = "=0.386.0"
deno_node = { version="=0.172.0", features = ["sync_fs"]  }
deno_snapshots = "=0.49.0"
deno_error = "=0.7.1"
deno_fs = { version="=0.144.0", features = ["sync_fs"]  }
deno_resolver = { version="=0.65.0", features = ["sync"]  }
deno_permissions = "=0.93.0"
deno_io = "=0.144.0"

serde = "1.0.228"
urlencoding = "2.1.3"
sys_traits = { version="=0.1.24"  }
deno_inspector_server = "0.8.0"




[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
